--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test": "export PLAYWRIGHT=True && pnpm exec playwright test"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.19",
     "@ai-sdk/react": "^1.2.11",
     "@ai-sdk/xai": "^1.2.15",
     "@codemirror/lang-javascript": "^6.2.2",
@@ -41,7 +42,6 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.24.1",
     "@vercel/functions": "^2.0.0",
-    "@vercel/otel": "^1.12.0",
     "@vercel/postgres": "^0.10.0",
     "ai": "4.3.13",
     "bcrypt-ts": "^5.0.2",
@@ -58,9 +58,9 @@
     "geist": "^1.3.1",
     "lucide-react": "^0.446.0",
     "nanoid": "^5.0.8",
-    "next": "15.3.0-canary.31",
+    "next": "^15.3.3",
     "next-auth": "5.0.0-beta.25",
-    "next-themes": "^0.3.0",
+    "next-themes": "^0.4.6",
     "orderedmap": "^2.1.1",
     "papaparse": "^5.5.2",
     "postgres": "^3.4.4",
@@ -72,9 +72,9 @@
     "prosemirror-schema-list": "^1.4.1",
     "prosemirror-state": "^1.4.3",
     "prosemirror-view": "^1.34.3",
-    "react": "19.0.0-rc-45804af1-20241021",
+    "react": "^19.1.0",
     "react-data-grid": "7.0.0-beta.47",
-    "react-dom": "19.0.0-rc-45804af1-20241021",
+    "react-dom": "^19.1.0",
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.7",
     "redis": "^5.0.0",
@@ -109,5 +109,5 @@
     "tsx": "^4.19.1",
     "typescript": "^5.6.3"
   },
-  "packageManager": "pnpm@9.12.3"
+  "packageManager": "pnpm@10.10.0"
 }
