--- a/.env.example
+++ b/.env.example
@@ -4,13 +4,13 @@ AUTH_SECRET=****
 # The following keys below are automatically created and
 # added to your environment when you deploy on vercel
 
-# Get your xAI API Key here for chat and image models: https://console.x.ai/
-XAI_API_KEY=****
+# Get your Gemini API Key here for chat and image models: https://ai.google.dev/gemini-api/docs/api-key?hl=ja
+GOOGLE_GENERATIVE_AI_API_KEY=****
 
 # Instructions to create a Vercel Blob Store here: https://vercel.com/docs/storage/vercel-blob
 BLOB_READ_WRITE_TOKEN=****
 
-# Instructions to create a PostgreSQL database here: https://vercel.com/docs/storage/vercel-postgres/quickstart
+# Instructions to create a PostgreSQL database here: 
 POSTGRES_URL=****
 
 
