--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,8 @@ GOOGLE_GENERATIVE_AI_API_KEY=****
 BLOB_READ_WRITE_TOKEN=****
 
 # Instructions to create a PostgreSQL database here: 
-POSTGRES_URL=****
-
+POSTGRES_URL=postgres://postgres:postgres@127.0.0.1:5432/bi-chatbot?sslmode=disable
 
 # Instructions to create a Redis store here:
 # https://vercel.com/docs/redis
-REDIS_URL=****
+#REDIS_URL=****
