--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@codemirror/state": "^6.5.2",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.37.1",
+    "@duckdb/node-api": "1.3.0-alpha.21",
+    "@duckdb/node-bindings": "1.3.0-alpha.21",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -46,6 +48,8 @@
     "diff-match-patch": "^1.0.5",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.34.1",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "fast-deep-equal": "^3.1.3",
     "framer-motion": "^11.18.2",
     "geist": "^1.4.2",
@@ -54,6 +58,7 @@
     "next": "15.3.0-canary.31",
     "next-auth": "5.0.0-beta.28",
     "next-themes": "^0.4.6",
+    "nunjucks": "^3.2.4",
     "orderedmap": "^2.1.1",
     "papaparse": "^5.5.3",
     "postgres": "^3.4.7",
@@ -78,6 +83,7 @@
     "swr": "^2.3.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "unstorage": "^1.16.0",
     "usehooks-ts": "^3.1.1",
     "zod": "^3.25.55"
   },
@@ -87,6 +93,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/d3-scale": "^4.0.9",
     "@types/node": "^22.15.30",
+    "@types/nunjucks": "^3.2.6",
     "@types/papaparse": "^5.3.16",
     "@types/pdf-parse": "^1.1.5",
     "@types/react": "^18.3.23",
