--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@codemirror/view": "^6.37.1",
     "@duckdb/node-api": "1.3.0-alpha.21",
     "@duckdb/node-bindings": "1.3.0-alpha.21",
+    "@mdx-js/mdx": "^3.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -39,6 +40,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@radix-ui/react-visually-hidden": "^1.2.3",
+    "@t3-oss/env-nextjs": "^0.13.6",
     "ai": "4.3.13",
     "bcrypt-ts": "^5.0.3",
     "class-variance-authority": "^0.7.1",
@@ -55,6 +57,8 @@
     "fast-deep-equal": "^3.1.3",
     "framer-motion": "^11.18.2",
     "geist": "^1.4.2",
+    "gray-matter": "^4.0.3",
+    "jiti": "^1.21.7",
     "lucide-react": "^0.446.0",
     "nanoid": "^5.1.5",
     "next": "15.3.0-canary.31",
@@ -87,6 +91,7 @@
     "tailwindcss-animate": "^1.0.7",
     "unstorage": "^1.16.0",
     "usehooks-ts": "^3.1.1",
+    "vfile": "^6.0.3",
     "zod": "^3.25.55"
   },
   "devDependencies": {
