--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.0.23",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint && biome lint --write --unsafe",
@@ -29,6 +29,7 @@
     "@duckdb/node-api": "1.3.0-alpha.21",
     "@duckdb/node-bindings": "1.3.0-alpha.21",
     "@mdx-js/mdx": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -63,6 +64,7 @@
     "nanoid": "^5.1.5",
     "next": "15.3.0-canary.31",
     "next-auth": "5.0.0-beta.28",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "nunjucks": "^3.2.4",
     "orderedmap": "^2.1.1",
@@ -82,6 +84,7 @@
     "react-markdown": "^9.1.0",
     "react-resizable-panels": "^2.1.9",
     "redis": "^5.5.6",
+    "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.1",
     "resumable-stream": "^2.2.0",
     "server-only": "^0.0.1",
