--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.0.23",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint && biome lint --write --unsafe",
@@ -26,34 +26,47 @@
     "@codemirror/state": "^6.5.2",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.37.1",
+    "@duckdb/node-api": "1.3.0-alpha.21",
+    "@duckdb/node-bindings": "1.3.0-alpha.21",
+    "@mdx-js/mdx": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@radix-ui/react-visually-hidden": "^1.2.3",
+    "@t3-oss/env-nextjs": "^0.13.6",
     "ai": "4.3.13",
     "bcrypt-ts": "^5.0.3",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "codemirror": "^6.0.1",
     "date-fns": "^4.1.0",
     "diff-match-patch": "^1.0.5",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.34.1",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "fast-deep-equal": "^3.1.3",
     "framer-motion": "^11.18.2",
     "geist": "^1.4.2",
+    "gray-matter": "^4.0.3",
+    "jiti": "^1.21.7",
     "lucide-react": "^0.446.0",
     "nanoid": "^5.1.5",
     "next": "15.3.0-canary.31",
     "next-auth": "5.0.0-beta.28",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
+    "nunjucks": "^3.2.4",
     "orderedmap": "^2.1.1",
     "papaparse": "^5.5.3",
     "postgres": "^3.4.7",
@@ -71,6 +84,7 @@
     "react-markdown": "^9.1.0",
     "react-resizable-panels": "^2.1.9",
     "redis": "^5.5.6",
+    "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.1",
     "resumable-stream": "^2.2.0",
     "server-only": "^0.0.1",
@@ -78,7 +92,9 @@
     "swr": "^2.3.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "unstorage": "^1.16.0",
     "usehooks-ts": "^3.1.1",
+    "vfile": "^6.0.3",
     "zod": "^3.25.55"
   },
   "devDependencies": {
@@ -87,6 +103,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/d3-scale": "^4.0.9",
     "@types/node": "^22.15.30",
+    "@types/nunjucks": "^3.2.6",
     "@types/papaparse": "^5.3.16",
     "@types/pdf-parse": "^1.1.5",
     "@types/react": "^18.3.23",
