--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@radix-ui/react-visually-hidden": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.13.6",
+    "@tanstack/react-query": "^5.80.7",
     "ai": "4.3.13",
     "bcrypt-ts": "^5.0.3",
     "class-variance-authority": "^0.7.1",
@@ -85,6 +86,7 @@
     "redis": "^5.5.6",
     "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.1",
+    "remark-mdx-frontmatter": "^5.2.0",
     "resumable-stream": "^2.2.0",
     "server-only": "^0.0.1",
     "sonner": "^1.7.4",
@@ -101,6 +103,7 @@
     "@playwright/test": "^1.52.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/d3-scale": "^4.0.9",
+    "@types/mdx": "^2.0.13",
     "@types/node": "^22.15.30",
     "@types/papaparse": "^5.3.16",
     "@types/pdf-parse": "^1.1.5",
