--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ai-chatbot",
-  "version": "3.0.23",
+  "name": "bi-chatbot",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -27,8 +27,8 @@
     "@codemirror/state": "^6.5.2",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.37.1",
-    "@duckdb/node-api": "1.3.0-alpha.21",
-    "@duckdb/node-bindings": "1.3.0-alpha.21",
+    "@duckdb/node-api": "1.3.1-alpha.22",
+    "@duckdb/node-bindings": "1.3.1-alpha.22",
     "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
