--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-icons": "^1.3.2",
@@ -100,8 +101,8 @@
     "zod": "^3.25.55"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^15.3.2",
     "@biomejs/biome": "2.0.0",
+    "@next/bundle-analyzer": "^15.3.2",
     "@playwright/test": "^1.52.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/d3-scale": "^4.0.9",
