--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "gray-matter": "^4.0.3",
     "jiti": "^1.21.7",
     "lucide-react": "^0.446.0",
+    "mustache": "^4.2.0",
     "nanoid": "^5.1.5",
     "next": "15.3.0-canary.31",
     "next-auth": "5.0.0-beta.28",
@@ -107,6 +108,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/d3-scale": "^4.0.9",
     "@types/mdx": "^2.0.13",
+    "@types/mustache": "^4.2.6",
     "@types/node": "^22.15.30",
     "@types/papaparse": "^5.3.16",
     "@types/pdf-parse": "^1.1.5",
