--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ POSTGRES_URL=postgres://postgres:postgres@127.0.0.1:5432/bi-chatbot?sslmode=disa
 # Instructions to create a Redis store here:
 # https://vercel.com/docs/redis
 #REDIS_URL=****
+
+GOOGLE_VERTEX_LOCATION=us-central1
+GOOGLE_VERTEX_PROJECT=<your-project-id>
