--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,6 @@
 # Generate a random secret: https://generate-secret.vercel.app/32 or `openssl rand -base64 32`
 AUTH_SECRET=****
 
-# Instructions to create a Vercel Blob Store here: https://vercel.com/docs/storage/vercel-blob
-BLOB_READ_WRITE_TOKEN=****
-
 # Instructions to create a PostgreSQL database here: 
 POSTGRES_URL=postgres://postgres:postgres@127.0.0.1:5432/bi-chatbot?sslmode=disable
 
@@ -11,4 +8,5 @@ POSTGRES_URL=postgres://postgres:postgres@127.0.0.1:5432/bi-chatbot?sslmode=disa
 # https://vercel.com/docs/redis
 #REDIS_URL=****
 
+GOOGLE_VERTEX_LOCATION=us-central1
 GOOGLE_VERTEX_PROJECT=<your-project-id>
