--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,12 @@
 # Generate a random secret: https://generate-secret.vercel.app/32 or `openssl rand -base64 32`
 AUTH_SECRET=****
 
-# The following keys below are automatically created and
-# added to your environment when you deploy on vercel
-
-# Get your Gemini API Key here for chat and image models: https://ai.google.dev/gemini-api/docs/api-key?hl=ja
-GOOGLE_GENERATIVE_AI_API_KEY=****
-
-# Instructions to create a Vercel Blob Store here: https://vercel.com/docs/storage/vercel-blob
-BLOB_READ_WRITE_TOKEN=****
-
 # Instructions to create a PostgreSQL database here: 
 POSTGRES_URL=postgres://postgres:postgres@127.0.0.1:5432/bi-chatbot?sslmode=disable
 
 # Instructions to create a Redis store here:
 # https://vercel.com/docs/redis
 #REDIS_URL=****
+
+GOOGLE_VERTEX_LOCATION=us-central1
+GOOGLE_VERTEX_PROJECT=<your-project-id>
