--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "ai-chatbot",
-  "version": "3.0.23",
+  "name": "bi-chatbot",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "analyze": "ANALYZE=true next build",
     "start": "next start",
-    "lint": "next lint && biome lint --write --unsafe",
+    "lint": "next lint && biome lint",
     "lint:fix": "next lint --fix && biome lint --write --unsafe",
     "format": "biome format --write",
     "db:generate": "drizzle-kit generate",
@@ -20,17 +21,19 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.19",
+    "@ai-sdk/google-vertex": "^2.2.24",
     "@ai-sdk/react": "^1.2.12",
     "@codemirror/lang-javascript": "^6.2.4",
     "@codemirror/lang-python": "^6.2.1",
     "@codemirror/state": "^6.5.2",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.37.1",
-    "@duckdb/node-api": "1.3.0-alpha.21",
-    "@duckdb/node-bindings": "1.3.0-alpha.21",
+    "@duckdb/node-api": "1.3.1-alpha.22",
+    "@duckdb/node-bindings": "1.3.1-alpha.22",
     "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-icons": "^1.3.2",
@@ -42,6 +45,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@radix-ui/react-visually-hidden": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.13.6",
+    "@tanstack/react-query": "^5.80.7",
     "ai": "4.3.13",
     "bcrypt-ts": "^5.0.3",
     "class-variance-authority": "^0.7.1",
@@ -61,12 +65,11 @@
     "gray-matter": "^4.0.3",
     "jiti": "^1.21.7",
     "lucide-react": "^0.446.0",
+    "mustache": "^4.2.0",
     "nanoid": "^5.1.5",
     "next": "15.3.0-canary.31",
     "next-auth": "5.0.0-beta.28",
-    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
-    "nunjucks": "^3.2.4",
     "orderedmap": "^2.1.1",
     "papaparse": "^5.5.3",
     "postgres": "^3.4.7",
@@ -86,6 +89,7 @@
     "redis": "^5.5.6",
     "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.1",
+    "remark-mdx-frontmatter": "^5.2.0",
     "resumable-stream": "^2.2.0",
     "server-only": "^0.0.1",
     "sonner": "^1.7.4",
@@ -94,16 +98,17 @@
     "tailwindcss-animate": "^1.0.7",
     "unstorage": "^1.16.0",
     "usehooks-ts": "^3.1.1",
-    "vfile": "^6.0.3",
     "zod": "^3.25.55"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
+    "@biomejs/biome": "2.0.0",
+    "@next/bundle-analyzer": "^15.3.2",
     "@playwright/test": "^1.52.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/d3-scale": "^4.0.9",
+    "@types/mdx": "^2.0.13",
+    "@types/mustache": "^4.2.6",
     "@types/node": "^22.15.30",
-    "@types/nunjucks": "^3.2.6",
     "@types/papaparse": "^5.3.16",
     "@types/pdf-parse": "^1.1.5",
     "@types/react": "^18.3.23",
