--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "lucide-react": "^0.446.0",
     "mustache": "^4.2.0",
     "nanoid": "^5.1.5",
-    "next": "15.3.0-canary.31",
+    "next": "^15.3.4",
     "next-auth": "5.0.0-beta.28",
     "next-themes": "^0.4.6",
     "orderedmap": "^2.1.1",
