refactor init sql

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,14 @@ POSTGRES_URL=postgres://postgres:postgres@127.0.0.1:5432/bi-chatbot?sslmode=disa
 
 GOOGLE_VERTEX_LOCATION=us-central1
 GOOGLE_VERTEX_PROJECT=<your-project-id>
+
+# connect to github
+# CONTENT_UNSTORAGE_DRIVER=github
+# CONTENT_UNSTORAGE_GITHUB_REPO=wonyx/bi-chatbot-example
+# CONTENT_UNSTORAGE_GITHUB_BRANCH=main
+# CONTENT_UNSTORAGE_GITHUB_TOKEN=<your-github-personal-token>
+
+# init sql vars are user defined variables that templated in the init sql file
+# example:
+# GCS_KEY_ID=<your-gcs-key-id>
+# GCS_SECRET=<your-gcs-secret>
